web/web_common/pgrx_validation_derive/tests/ui/test_no_doc_validation.stderr
error: Function `must_not_be_empty` must have a doc comment to be decorated with `validation`.
 --> tests/ui/test_no_doc_validation.rs:6:8
  |
6 | pub fn must_not_be_empty(_arg: &str) -> Result<(), validation_errors::prelude::SingleFieldError> {
  |        ^^^^^^^^^^^^^^^^^
